# ca_leginfo_api

./: README.md  pyproject.toml
src/: ca_leginfo.py  ca_leginfo_integration_test.py  ca_leginfo_test.py  constants.py
src/caleginfo/: ca_leginfo.py  ca_leginfo_integration_test.py  constants.py
