[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "CA LegInfo API"
version = "0.0.1"
authors = [
  { name="Mike Bernico", email="mike.bernico@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "APACHE2"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"